@@ -1,6 +1,8 @@
 package org.jsoup.helper;
 
 import org.jsoup.Connection;
+import org.jsoup.HttpStatusException;
+import org.jsoup.UnsupportedMimeTypeException;
 import org.jsoup.nodes.Document;
 import org.jsoup.parser.Parser;
 import org.jsoup.parser.TokenQueue;
@@ -394,57 +396,64 @@ public class HttpConnection implements Connection {
         static Response execute(Connection.Request req, Response previousResponse) throws IOException {
             Validate.notNull(req, "Request must not be null");
             String protocol = req.url().getProtocol();
-            Validate
-                .isTrue(protocol.equals("http") || protocol.equals("https"), "Only http & https protocols supported");
+            if (!protocol.equals("http") && !protocol.equals("https"))
+                throw new MalformedURLException("Only http & https protocols supported");
 
             // set up the request for execution
             if (req.method() == Connection.Method.GET && req.data().size() > 0)
                 serialiseRequestUrl(req); // appends query string
             HttpURLConnection conn = createConnection(req);
-            conn.connect();
-            if (req.method() == Connection.Method.POST)
-                writePost(req.data(), conn.getOutputStream());          
-
-            int status = conn.getResponseCode();
-            boolean needsRedirect = false;
-            if (status != HttpURLConnection.HTTP_OK) {
-                if (status == HttpURLConnection.HTTP_MOVED_TEMP || status == HttpURLConnection.HTTP_MOVED_PERM || status == HttpURLConnection.HTTP_SEE_OTHER)
-                    needsRedirect = true;
-                else if (!req.ignoreHttpErrors())
-                    throw new IOException(status + " error loading URL " + req.url().toString());
-            }
-            Response res = new Response(previousResponse);
-            res.setupFromConnection(conn, previousResponse);
-            if (needsRedirect && req.followRedirects()) {
-                req.method(Method.GET); // always redirect with a get. any data param from original req are dropped.
-                req.data().clear();
-                req.url(new URL(req.url(), res.header("Location")));
-                for (Map.Entry<String, String> cookie : res.cookies.entrySet()) { // add response cookies to request (for e.g. login posts)
-                    req.cookie(cookie.getKey(), cookie.getValue());
-                }
-                return execute(req, res);
-            }
-            res.req = req;
-
-            // check that we can handle the returned content type; if not, abort before fetching it
-            String contentType = res.contentType();
-            if (contentType != null && !req.ignoreContentType() && (!(contentType.startsWith("text/") || contentType.startsWith("application/xml") || contentType.startsWith("application/xhtml+xml"))))
-                throw new IOException(String.format("Unhandled content type \"%s\" on URL %s. Must be text/*, application/xml, or application/xhtml+xml",
-                    contentType, req.url().toString()));
-
-            InputStream bodyStream = null;
-            InputStream dataStream = null;
+            Response res;
             try {
-                dataStream = conn.getErrorStream() != null ? conn.getErrorStream() : conn.getInputStream();
-            	bodyStream = res.hasHeader("Content-Encoding") && res.header("Content-Encoding").equalsIgnoreCase("gzip") ?
-                        new BufferedInputStream(new GZIPInputStream(dataStream)) :
-                        new BufferedInputStream(dataStream);
-                
-                res.byteData = DataUtil.readToByteBuffer(bodyStream);
-                res.charset = DataUtil.getCharsetFromContentType(res.contentType); // may be null, readInputStream deals with it
+                conn.connect();
+                if (req.method() == Connection.Method.POST)
+                    writePost(req.data(), conn.getOutputStream());
+
+                int status = conn.getResponseCode();
+                boolean needsRedirect = false;
+                if (status != HttpURLConnection.HTTP_OK) {
+                    if (status == HttpURLConnection.HTTP_MOVED_TEMP || status == HttpURLConnection.HTTP_MOVED_PERM || status == HttpURLConnection.HTTP_SEE_OTHER)
+                        needsRedirect = true;
+                    else if (!req.ignoreHttpErrors())
+                        throw new HttpStatusException("HTTP error fetching URL", status, req.url().toString());
+                }
+                res = new Response(previousResponse);
+                res.setupFromConnection(conn, previousResponse);
+                if (needsRedirect && req.followRedirects()) {
+                    req.method(Method.GET); // always redirect with a get. any data param from original req are dropped.
+                    req.data().clear();
+                    req.url(new URL(req.url(), res.header("Location")));
+                    for (Map.Entry<String, String> cookie : res.cookies.entrySet()) { // add response cookies to request (for e.g. login posts)
+                        req.cookie(cookie.getKey(), cookie.getValue());
+                    }
+                    return execute(req, res);
+                }
+                res.req = req;
+
+                // check that we can handle the returned content type; if not, abort before fetching it
+                String contentType = res.contentType();
+                if (contentType != null && !req.ignoreContentType() && (!(contentType.startsWith("text/") || contentType.startsWith("application/xml") || contentType.startsWith("application/xhtml+xml"))))
+                    throw new UnsupportedMimeTypeException("Unhandled content type. Must be text/*, application/xml, or application/xhtml+xml",
+                            contentType, req.url().toString());
+
+                InputStream bodyStream = null;
+                InputStream dataStream = null;
+                try {
+                    dataStream = conn.getErrorStream() != null ? conn.getErrorStream() : conn.getInputStream();
+                    bodyStream = res.hasHeader("Content-Encoding") && res.header("Content-Encoding").equalsIgnoreCase("gzip") ?
+                            new BufferedInputStream(new GZIPInputStream(dataStream)) :
+                            new BufferedInputStream(dataStream);
+
+                    res.byteData = DataUtil.readToByteBuffer(bodyStream);
+                    res.charset = DataUtil.getCharsetFromContentType(res.contentType); // may be null, readInputStream deals with it
+                } finally {
+                    if (bodyStream != null) bodyStream.close();
+                    if (dataStream != null) dataStream.close();
+                }
             } finally {
-                if (bodyStream != null) bodyStream.close();
-                if (dataStream != null) dataStream.close();
+                // per Java's documentation, this is not necessary, and precludes keepalives. However in practise,
+                // connection errors will not be released quickly enough and can cause a too many open files error.
+                conn.disconnect();
             }
 
             res.executed = true;
